feat: enhance documentation and add new dependencies
- Updated documentation to include detailed descriptions for application configuration, components, and services.
- Added `pokeapi-js-wrapper` dependency for improved API interactions and future implementation of caching with the wrapper
- Enhanced `app.component.ts`, `app.config.ts`, `pokemon-detail.component.ts`, `pokemon-list.component.ts`, `navbar.component.ts`, `pokemon.service.ts`, and `search.service.ts` with comprehensive comments and JSDoc annotations.
- Improved error handling and data validation in `pokemon-list.component.ts` for API responses.

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -118,88 +118,88 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/AppComponent.html">src/app/app.component.ts</a>
             </td>
             <td>component</td>
             <td>AppComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                         <a href="./miscellaneous/variables.html#appConfig">src/app/app.config.ts</a>
             </td>
             <td>variable</td>
             <td>appConfig</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PokemonDetailComponent.html">src/app/components/pokemon-detail/pokemon-detail.component.ts</a>
             </td>
             <td>component</td>
             <td>PokemonDetailComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PokemonListComponent.html">src/app/components/pokemon-list/pokemon-list.component.ts</a>
             </td>
             <td>component</td>
             <td>PokemonListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/26)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(26/26)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/NavbarComponent.html">src/app/navbar/navbar.component.ts</a>
             </td>
             <td>component</td>
             <td>NavbarComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/PokemonService.html">src/app/services/pokemon.service.ts</a>
             </td>
             <td>injectable</td>
             <td>PokemonService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/8)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/SearchService.html">src/app/services/search.service.ts</a>
             </td>
             <td>injectable</td>
             <td>SearchService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
     </tbody>
