--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -115,6 +115,8 @@
         <li>
             <b>@angular/router</b> : ^19.2.0</li>
         <li>
+            <b>pokeapi-js-wrapper</b> : ^1.2.8</li>
+        <li>
             <b>rxjs</b> : ~7.8.0</li>
         <li>
             <b>tslib</b> : ^2.3.0</li>
